--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                   <li><a class="dropdown-item" href="/support us">Support us</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/AadiProGamer-/contact.html">Contact Us</a>
               </li>
             </ul>
